deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-app-deployment
  labels:
    app: reverse-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-app
  template:
    metadata:
      labels:
        app: reverse-app
    spec:
      containers:
      - name: reverse-app
        image: darshan119/reverse-app:v2
        ports:
        - containerPort: 4001
        imagePullPolicy: Always
