service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uppercase-app-service
spec:
  selector:
    app: uppercase-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
